# Real-time-Stock-Monitoring-with-Jetson-YOLO

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: shelf_base_reference.json  shelf_slots.yaml
data/dataset/processed/: data.yaml
data/dataset/processed/train/: labels.cache
data/dataset/processed/valid/: labels.cache
data/evidence/: v0.5_test_notes.md  v0.6_test_notes.md  v0.8.md
data/logs/: detection_log.csv  status_events.csv
docs/releases/: v0.5.md  v0.6.md  v0.7  v0.8.md  v1.0.0.md
docs/validation/: live_stock_level_test.md
runs/: save
runs/v1/: args.yaml  results.csv
src/: camera.py  detection_logger.py  evidence_capture.py  main.py  shelf_config.py
src/edge_vision_inventory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: enroll_shelf_base.py  enroll_slot_capacity.py  live_stock_level_test.py
