[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-vision-inventory"
version = "1.0.0"
description = "Camera-only shelf inventory monitoring system using YOLO segmentation and OpenCV."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
